# faceai

./: Cargo.toml  LICENSE  README.md  build.rs  env.sh
arcsoft/demo/: samplecode.cpp
arcsoft/inc/: arcsoft_face_sdk.h  wrapper.h
examples/demo/: Cargo.toml  README.md  env.sh
examples/demo/src/: main.rs
src/: face_detect.rs  lib.rs
src/imp/: arcsoft_imp.rs  arcsoft_sys.rs  mod.rs
