[package]
name = "faceai"
version = "0.1.0"
authors = ["armer song <armer_song@qq.com>"]
edition = "2018"
description = "A simple face ai library for Rust"
documentation = "https://docs.rs/faceai"
keywords = ["face-recognition", "face-detection" ]
license = "MIT/Apache-2.0"

[dependencies]
log = "0.4"


[workspace]
members = [
  "./",
  "examples/demo",
]
